deck update feature finish

--- a/src/i18n/translateEN.json
+++ b/src/i18n/translateEN.json
@@ -11,7 +11,14 @@
         "5": "Poseidia",
         "6": "Celestial purity"
     },
-    "kingdom": "Kingdom",
+    "kingdom": "Kingdom(s)",
+    "raritie": "raritie(s)",
+    "class": "class(es)",
+    "capacitie" : "capacitie(s)",
+    "name": "name",
+    "filter":"filter(s)",
+    "close":"close",
+    "valid":"valid",
     "Enter Deck Name Placeholder": "Enter the deck's name ...",
     "create": "Create",
     "new deck": "new deck",
