--- a/src/i18n/translateFR.json
+++ b/src/i18n/translateFR.json
@@ -11,7 +11,14 @@
         "5": "Poseidia",
         "6": "Pureté céleste"
     },
-    "kingdom": "Royaume",
+    "kingdom": "Royaume(s)",
+    "raritie": "raretée(s)",
+    "class": "classe(s)",
+    "capacitie" : "capacitéé(s)",
+    "filter": "filtre(s)",
+    "name":"nom",
+    "close": "fermer",
+    "valid":"valider",
     "Enter Deck Name Placeholder": "Entrez le nom du deck ...",
     "create": "Créer",
     "new deck": "nouveau deck",
